--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 HELP.md
 .gradle
 build/
-!gradle/wrapper/gradle-wrapper.jar
+gradle/
 !**/src/main/**/build/
-!**/src/test/**/build/
+src/test/**
+gradlew
+gradlew.bat
+settings.gradle
 
 ### STS ###
 .apt_generated
